5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1649_2447.log
== SUBMITION (2019-04-16 15:48:50) 
-- CODE:
p=float(input("preco:"))
pag=float(input("pagamento:"))
x= p - pgag
y=pag-p
if(p>pag):
	print("falta",x)
else:
	print("troco de",y)
-- EXECUTION TIME:
0.178157
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 3, in <module>
    x= p - pgag
NameError: name 'pgag' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:49:08) 
-- CODE:
p=float(input("preco:"))
pag=float(input("pagamento:"))
x= p - pgag
y=pag-p
if(p>pag):
	print("falta",x)
else:
	print("Troco de",y)
-- EXECUTION TIME:
0.135044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 3, in <module>
    x= p - pgag
NameError: name 'pgag' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:52:22) 
-- CODE:
p=float(input("preco:"))
pag=float(input("pagamento:"))
x= p - pag
y= pag - p
if (p > pag):
	print("Falta", x)
else:
	print("Troco de", y)
-- EXECUTION TIME:
0.233283
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
